[package]
name = "topfew"
version = "0.1.3"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
license = "GPL-3.0"
repository = "https://github.com/djc/topfew-rs"
description = "CLI to find high frequency occurrences in structured text files"
keywords = ["cli"]
categories = ["command-line-utilities", "text-processing"]
edition = "2018"

[dependencies]
anyhow = "1"
err-derive = "0.2"
regex = "1"
structopt = "0.3"
rayon = "1.3"

[dev-dependencies]
tempfile = "3.1"
quickcheck = "0.9"

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
